Fix content bubble background on Safari/WebKit

--- a/styles.css
+++ b/styles.css
@@ -60,6 +60,7 @@ body > * {
   text-align: center;
   font-family: 'Open Sans', sans-serif;
   color: rgba(0, 0, 0, 0.85);
+  position: relative;
 }
 
 b {
